src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Branch2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>支店2</label>
        <referenceTo>auOrganization__c</referenceTo>
        <relationshipLabel>支店2</relationshipLabel>
        <relationshipName>Branch2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BranchId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>支店</label>
        <referenceTo>auOrganization__c</referenceTo>
        <relationshipLabel>支店</relationshipLabel>
        <relationshipName>Branch</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CCPFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <globalPicklist>AccountChannel</globalPicklist>
        <label>チャネル</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DisplayedName__c</fullName>
        <label>支社名, 運営法人/代理店名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KDDISalesUserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KDDI営業担当者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>KDDISalesUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastModifiedDateFormula__c</fullName>
        <formula>Datevalue(LastModifiedDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedDateFormula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <label>LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ManagementCorpCode__c</fullName>
        <label>出店者コード</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManagementCorpId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>運営法人</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>取引先 (運営法人)</relationshipLabel>
        <relationshipName>ManagementCorp</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParentAgencyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>一次代理店</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>取引先 (一次代理店)</relationshipLabel>
        <relationshipName>ParentAgency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PartnerCode__c</fullName>
        <externalId>true</externalId>
        <label>代理店/法人/拠点コード</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RegionalOffice2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>支社2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>auOrganization__c.Category__c</field>
                <operation>equals</operation>
                <value>支社</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>auOrganization__c</referenceTo>
        <relationshipLabel>支社2</relationshipLabel>
        <relationshipName>RegionalOffice2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RegionalOfficeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>支社</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>auOrganization__c.Category__c</field>
                <operation>equals</operation>
                <value>支社</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>auOrganization__c</referenceTo>
        <relationshipLabel>支社</relationshipLabel>
        <relationshipName>RegionalOffice</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Slogan__c</fullName>
        <label>スローガン</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>karteLastModifiedDate__c</fullName>
        <label>カルテ最終更新日</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>RegionalOfficeId__c</columns>
        <columns>BranchId__c</columns>
        <columns>Channel__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>DisplayedName__c</columns>
        <columns>ManagementCorpId__c</columns>
        <columns>ParentAgencyId__c</columns>
        <columns>PartnerCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>